--- a/src/WebApi/wwwroot/index.html
+++ b/src/WebApi/wwwroot/index.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Defender</title>
-</head>
-<body>
-    <h1>Service Template</h1>
-    <p><a href="/swagger">Click here to go to the Swagger UI.</a> </p>
-</body>
+  </head>
+  <body>
+    <h1>Budget Tracker</h1>
+    <p><a href="/swagger">Click here to go to the Swagger UI.</a></p>
+  </body>
 </html>
